--- a/CasoEditor/src/GUI/Editor.form
+++ b/CasoEditor/src/GUI/Editor.form
@@ -145,6 +145,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Save as"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
